--- a/views/admin/new.ejs
+++ b/views/admin/new.ejs
@@ -1,24 +1,31 @@
 <%- include('../partials/header', { title: 'Create New Blog' }) %>
 
-<h1 class="mb-4">Create New Blog</h1>
-<form action="/admin/blogs" method="POST">
-  <div class="mb-3">
-    <label for="title" class="form-label">Title:</label>
-    <input type="text" name="title" class="form-control" id="title">
+<div class="d-flex justify-content-between p-2">
+  <h1 class="mb-4 h3">Admin - Create new Blog</h1>
+  <div>
+    <a href="/admin/blogs" class="btn btn-sm btn-secondary mb-3"> <i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
   </div>
-  <div class="mb-3">
-    <label for="content" class="form-label">Content:</label>
-    <textarea name="content" class="form-control" id="content"></textarea>
-  </div>
-  <div class="mb-3">
-    <label for="status" class="form-label">Status:</label>
-    <select name="status" class="form-select" id="status">
-      <option value="draft">Draft</option>
-      <option value="publish">Publish</option>
-    </select>
-  </div>
-  <button type="submit" class="btn btn-success"><i class="fas fa-save"></i> Create</button>
-  <a href="/admin/blogs" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Back to Admin</a>
-</form>
+</div> 
 
-<%- include('../partials/footer') %>
+
+  <form action="/admin/blogs/new" method="POST">
+    <div class="mb-3">
+      <label for="title" class="form-label">Title:</label>
+      <input type="text" name="title" class="form-control" id="title">
+    </div>
+    <div class="mb-3">
+      <label for="content" class="form-label">Content:</label>
+      <textarea name="content" class="form-control" id="content"></textarea>
+    </div>
+    <div class="mb-3">
+      <label for="status" class="form-label">Status:</label>
+      <select name="status" class="form-select" id="status">
+        <option value="draft">Draft</option>
+        <option value="publish">Publish</option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-success"><i class="fas fa-save"></i> Create</button>
+  
+  </form>
+
+  <%- include('../partials/footer') %>
