--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,14 +14,14 @@
 <body>
   <header class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg w-100">
         <a class="navbar-brand" href="/">SITENAME</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav ">
             <li class="nav-item">
               <a class="nav-link" href="/">Home</a>
             </li>
@@ -34,12 +34,15 @@
             </li>
             <% if (loggedIn) { %>
               <li class="nav-item">
+                <a class="nav-link" href="/user/settings">User Settings</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link text-danger"  href="/user/logout">Logout</a>
               </li>
               <% } else { %>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="/user/login">Login</a>
+                <li class="nav-item bg-dark">
+                  <a class="nav-link text-white" href="/user/login">Login</a>
                 </li>
                 <% } %>
 
