--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -19,7 +19,7 @@
             </span></small>
           <small class="pe-4"> Comments: <%= blog.comments_count %></small>
           <small class="pe-4"> Published: <%= blog.updated_at %></small>
-          <small class="pe-4"> Author: Admin</small>
+          <small class="pe-4"> Author: <%= admin.username %> </small>
         </p>
       </div>
       <div class="my-1">
