--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
             <i class="fa fa-globe" aria-hidden="true"></i> published : <%= blog.updated_at %>
           </small>
           <small class="pe-4">
-            <i class="fa fa-pencil" aria-hidden="true"></i> Author : Admin
+            <i class="fa fa-pencil" aria-hidden="true"></i> Author : <%= admin.username %>
           </small>
         </p>
       </div>
