--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -25,8 +25,21 @@
         <option value="publish" <%=blog.status==='publish' ? 'selected' : '' %>>Publish</option>
       </select>
     </div>
+    <div class="row mb-3">
+      <div class="col-md-6">
+        <label class="form-label d-inline-block text-capitalize">Last updated at</label>
+        <p class="d-inline-block border p-2">
+          <%= blog.updated_at %>
+        </p>
+      </div>
+      <div class="col-md-6">
+        <label class="form-label d-inline-block text-capitalize">created at</label>
+        <p class="d-inline-block border p-2">
+          <%= blog.created_at %>
+        </p>
+      </div>
+    </div>
     <button type="submit" class="btn btn-success"><i class="fas fa-save"></i> Update</button>
-    <a href="/admin/blogs" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Back to Admin</a>
   </form>
 
   <%- include('../partials/footer') %>
