--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -18,7 +18,8 @@
               <%= blog.likes_count %>
             </span></small>
           <small class="pe-4"> Comments: <%= blog.comments_count %></small>
-          <small class="pe-4"> Published: <%= blog.updated_at %></small>
+          <small class="pe-4"> Last update: <%= blog.updated_at %></small>
+          <small class="pe-4"> Published: <%= blog.created_at %></small>
           <small class="pe-4"> Author: <%= admin.username %> </small>
         </p>
       </div>
