--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,10 @@
             </button>
           </small>
           <small class="pe-4">
-            <i class="fa fa-globe" aria-hidden="true"></i> published : <%= blog.updated_at %>
+            <i class="fa fa-globe" aria-hidden="true"></i> published : <%= blog.created_at %>
+          </small>
+          <small class="pe-4">
+            <i class="fa fa-globe" aria-hidden="true"></i> Last update : <%= blog.updated_at %>
           </small>
           <small class="pe-4">
             <i class="fa fa-pencil" aria-hidden="true"></i> Author : <%= admin.username %>
