--- a/views/admin/new.ejs
+++ b/views/admin/new.ejs
@@ -1,12 +1,19 @@
 <%- include('../partials/header', { title: 'Create New Blog' }) %>
 
-<div class="d-flex justify-content-between p-2">
-  <h1 class="mb-4 h3">Admin - Create new Blog</h1>
-  <div>
-    <a href="/admin/blogs" class="btn btn-sm btn-secondary mb-3"> <i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
+  <div class="d-flex justify-content-between p-2">
+    <h1 class="mb-4 h3">Admin - Create new Blog</h1>
+    <div>
+      <a href="/admin/blogs" class="btn btn-sm btn-secondary mb-3"> <i class="fa fa-arrow-left" aria-hidden="true"></i>
+        Back</a>
+    </div>
   </div>
-</div> 
-
+  <div class="text-center py-2">
+    <% if (errorMessage) { %>
+      <div class="text-danger small py-2">
+        <%= errorMessage %>
+      </div>
+      <% } %>
+  </div>
 
   <form action="/admin/blogs/new" method="POST">
     <div class="mb-3">
@@ -25,7 +32,7 @@
       </select>
     </div>
     <button type="submit" class="btn btn-success"><i class="fas fa-save"></i> Create</button>
-  
+
   </form>
 
   <%- include('../partials/footer') %>
