--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -1,20 +1,26 @@
 <%- include('../partials/header', { title: 'user Settings' }) %>
 
-    <h1>user Settings</h1>
+    <h1 class="h3 py-2">user Settings</h1>
 
-    <form action="/user/settings" method="POST">
-        <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input type="text" class="form-control form-control-sm" id="username" name="username"
-                value="<%= user.username %>" required>
+    <% if (errorMessage) { %>
+        <div class="text-danger small py-2">
+            <%= errorMessage %>
         </div>
-        <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control form-control-sm" id="email" name="email" value="<%= user.email %>"
-                required>
-        </div>
-        <button type="submit" class="btn btn-primary">Save Changes</button>
-    </form>
+        <% } %>
+
+            <form class="py-2" action="/user/settings" method="POST">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control form-control-sm" id="username" name="username"
+                        value="<%= user.username %>" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control form-control-sm" id="email" name="email"
+                        value="<%= user.email %>" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+            </form>
 
 
-    <%- include('../partials/footer') %>
+            <%- include('../partials/footer') %>
