--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -18,7 +18,7 @@
         <th scope="col">created_at</th>
         <th scope="col">updated_at (published)</th>
         <th scope="col">Status</th>
-        <th scope="col">Actions</th>
+        <th scope="col" class="text-center">Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -47,7 +47,7 @@
           <td>
             <%= blog.status %>
           </td>
-          <td>
+          <td class="text-center">
             <button class="btn btn-sm share-button btn-light" data-blogid="<%= blog.id %>">
               <i class="fa fa-share" aria-hidden="true"></i> Share
             </button>
